--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
@@ -1,12 +1,12 @@
-{% load get_course_filters get_username user_access_policy from ndf_tags %}
+{% load get_course_filters get_username user_access_policy get_group_object from ndf_tags %}
 {% user_access_policy groupid request.user as user_access_priv %}
 {% load simple_filters %}
 
 
 
+{% get_group_object group_id as group_object %}
 
 {% include 'ndf/widget_user_access_modal.html' %}
-
 
 <div class="notebook">
     {% comment %}
@@ -75,7 +75,7 @@
         <div class="small-12 medium-4 large-3 columns notebook-index panel">
             <div class="row">
                 <div class="small-12 columns">
-                    <span style="font-size: 17px;margin: 7px 19px;display: inline-block;color: #6153AE;">Notes</span>
+                    <span style="font-size: 17px;margin: 7px 19px;display: inline-block;color: #6153AE;"> {% if 'Group' in group_object.member_of_names_list %} Blogs {% else %} Notes {% endif %}</span>
                     {% if request.user.is_authenticated %}
                     {% comment %}
                     <a href="#" data-reveal-id="newNoteModal" class="button expand radius" style="margin: 0em 0em 1em;"><i class="fi-plus"></i> </a>
@@ -92,9 +92,10 @@
             </div>
 
             <ul class="tabs" data-tab style="">
-                <li class="tab-title {% ifequal tab 'all-notes' %} active{% endifequal %}"><a href="#all-notes">All Notes ({{blog_pages.count}})</a></li>
+                <li class="tab-title {% ifequal tab 'all-notes' %} active{% endifequal %}"><a href="#all-notes">
+                {% if 'Group' in group_object.member_of_names_list %}All Blogs {% else %} All Notes {% endif %} ({{blog_pages.count}})</a></li>
                 {% if user.is_authenticated %}
-                    <li class="tab-title {% ifequal tab 'my-notes' %} active{% endifequal %}"><a href="#my-notes">My Notes ({{user_blogs.count}})</a></li>
+                    <li class="tab-title {% ifequal tab 'my-notes' %} active{% endifequal %}"><a href="#my-notes"> {% if 'Group' in group_object.member_of_names_list %}My Blogs {% else %} My Blogs {% endif %} ({{user_blogs.count}})</a></li>
                 {% endif %}
                 {% comment %}
                     <li class="tab-title"><a href="#my-drafts">My Drafts</a></li>
