--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -5,7 +5,7 @@
 {% user_access_policy groupid request.user as user_access %}
 
 
-{% block title %} Unit {% endblock%}
+{% block title %}  Unit {% endblock%}
 
 {% block head %}
   <script src="/static/ndf/bower_components/jquery-backstretch/jquery.backstretch.min.js"></script>
@@ -59,7 +59,7 @@
                       <a class="close-reveal-modal">&#215;</a>
                   </div>
               </li>
-              
+              {% if 'Group' not in group_object.member_of_names_list %}
               <li>
                   <a href="{% url 'create_event_group' group_id 'CourseEventGroup' %}" class="fi-volume"> {% trans "Announce" %}</a>
               </li>
@@ -73,7 +73,7 @@
                   {% endfor %}
               </ul>
               </li>
-
+              {% endif %}
 
               <li> <a data-reveal-id="delete-unit"><i class="fa fa-trash"></i> {% trans "Delete" %}</a> </li>
               <div id="delete-unit" class="reveal-modal tiny text-center" data-reveal>
@@ -110,11 +110,19 @@
       <a href="{% url 'course_content' group_id %}" {% if title == 'course content' %}class="selected"{% endif %}>
       {% if not group_object.project_config.tab_name %}{% trans "Lessons" %}{% else %}{{group_object.project_config.tab_name}} {% endif %}</a> 
      </li>
+    {% if 'Group' not in group_object.member_of_names_list %}
     <li>  <a href="{% url 'course_raw_material' group_id %}" {% if title == 'raw material' or title == "raw_material_detail"  %}class="selected"{% endif %}>{% trans "Resources" %}</a> </li>
+    {% endif %}
     <li>
     <li>  <a  href="{% url 'course_gallery' group_id %}" {% if title == 'gallery' or title == "asset_gallery_detail" %} class="selected" {% endif %} >{% trans "Gallery" %}</a> </li>
     <li>
-      <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>{% trans "Notebook" %}</a>
+      <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>
+      {% if 'Group' in group_object.member_of_names_list %}
+        {% trans "Blog" %} 
+      {% else %}
+        {% trans "Notebook" %} 
+      {% endif %}
+      </a>
     </li>
   </ul>
 </div>
