--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_secondary_header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/explore_secondary_header.html
@@ -1,26 +1,31 @@
 {% load i18n %}
-{% load check_is_gstaff user_groups from ndf_tags %}
+{% load check_is_gstaff user_groups get_gstudio_workspace_instance from ndf_tags %}
 {% check_is_gstaff group_id request.user as is_gstaff %}
 {% user_groups request.user.is_superuser request.user.id as user_grp_count %}
+{% get_gstudio_workspace_instance as is_workspace_instance %}
+
 <nav class="top-bar-second" data-topbar role="navigation" id="top-bar-second">
 		<div class="small-12 medium-12 columns expore-type">
 			<!--<div class="toggleButtons">-->
 			<div class="title-area">
-
+			{% if  not is_workspace_instance %}
 				<a href="{% url 'explore_courses' %}" class="secondary-header-tabs  {%if title == 'courses'%} active{% endif %}">
 					{% trans "Courses" %}
 				</a>
-
+			{% endif %}
 				{% if request.user.is_superuser or user_grp_count.projects > 0  %}
 				<a href="{% url 'explore_groups' %}" class="secondary-header-tabs {%if title == 'workspaces'%} active{% endif %}">
 					{% trans "Workspaces" %}
 				</a>
 				{% endif %}
+				{% if  not is_workspace_instance %}
 				{% if request.user.is_superuser or user_grp_count.drafts > 0  %}
 				<a href="{% url 'explore_drafts' %}" class="secondary-header-tabs {%if title == 'drafts'%} active{% endif %}">
 					{% trans "Drafts Courses" %}
 				</a>
 				{% endif %}
+				{% endif %}
+				
 
 			</div>
 		</div>
