--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_detail.html
@@ -16,12 +16,9 @@
 				
 			<a  class="edit_button" href="{% url 'module_edit' group_id node.pk %}" style="text-transform: none;"> <i class="fa fa-pencil">{% trans "Edit" %}</i></a>
 			{% if node.collection_set %}
-			 	<a data-reveal-id="delete-unit" class="tiny button secondary" title="Please delete all units associated with this module." style="margin-right: 10px;
-    background-color: #fff;
-    text-transform: none;
-    font-size: 14px;" disabled ><i class="fa fa-trash"></i> {% trans "Delete" %} </a>
+			 	<a data-reveal-id="delete-unit" class="tiny button secondary" title="Please delete all units associated with this module." style="margin-right: 10px; background-color: #fff; text-transform: none; font-size: 14px;" disabled > <i class="fa fa-trash"></i> {% trans "Delete" %} </a>
 		 	 {% else %}
-			 	<a data-reveal-id="delete-unit" class="tiny button secondary disab-button"><i class="fa fa-trash"></i> {% trans "Delete" %} </a>
+			 	<a data-reveal-id="delete-unit" class="tiny button secondary disab-button" style="margin-right: 10px; background-color: #fff; text-transform: none; font-size: 14px; color= blue;"><i class="fa fa-trash"></i> {% trans "Delete" %} </a>
 			{% endif %}
               <div id="delete-unit" class="reveal-modal tiny text-center" data-reveal>
                     <h3>{% trans "Delete Unit:" %} {% firstof group_object.altnames group_object.name  %} ?</h3>
