--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
@@ -55,7 +55,7 @@
       <!-- Search Box -->
       <div class="search-box">
           <div class="inline-block-display auto-width" >
-            <h4>{% trans 'Search User by name : ' %}</h4>
+            <h4>{% trans 'Search User by username : ' %}</h4>
           </div>
           <div class="inline-block-display auto-width" >
             <input type="text" class="student_name" value="" placeholder="Enter atleast 3 letters">
@@ -155,8 +155,8 @@
       var cell5 = header_row.insertCell(4)
       cell1.innerHTML = "<b>No.</b>"
       cell2.innerHTML = "<b>Name</b>"
-      cell3.innerHTML = "<b>Member</b><br/> <input type='checkbox' class='select-mem'> Select All "
-      cell4.innerHTML = "<b>Admin</b><br/> <input type='checkbox' class='select-adm'> Select All"
+      cell3.innerHTML = "<input type='checkbox' title='Select All' class='select-mem'> <b>Member</b>"
+      cell4.innerHTML = "<input type='checkbox' title='Select All' class='select-adm'> <b>Admin</b>"
       cell5.innerHTML = "<b>Action</b>"
       return stud_table
   }
