star logo button and placeholder image added

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -244,5 +244,17 @@
                 <div  class="inner">
                     <button type="button"  class="right orange-button " id="insert_find_the_rate" >Insert Find the rate </button>
                 </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model1_en" >Insert StarLogo Nova Model1 (en) </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model2_en" >Insert StarLogo Nova Model2 (en) </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model1_hi" >Insert StarLogo Nova Model1 (hi) </button>
+                </div>
+                <div  class="inner">
+                    <button type="button"  class="right orange-button " id="insert_starlogo_model2_hi" >Insert StarLogo Nova Model2 (hi) </button>
+                </div>
             </div>
 </div>
