--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -31,7 +31,7 @@
         <div class="left unit_name"> {% firstof group_object.altnames group_object.name  %}
         </div>
           {% if is_gstaff %}
-          <div class="right course_actions">
+          <div class="right course_actions" style="margin-right:50px;">
 
               <span data-dropdown="course-settings-drop" aria-controls="course-settings-drop" aria-expanded="false" class="tiny radius right" data-options="align:left">
                   <i class="icon-widget fi-widget"></i>
