--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -953,7 +953,11 @@ Still keeping for future ref (if needed).
     var iframeBodyHt = $("iframe").contents().find("body").height();
     var docHeight = $(window).height();
     docHeight -= docHeight * 0.20;
-    $("iframe").not('.twitter-share-button').height(docHeight + 50);
+    // console.log(iframeBodyHt);
+    // console.log(docHeight);
+    if (iframeBodyHt < docHeight) {
+      $("iframe").not('.twitter-share-button').height(docHeight + 50);
+    }
 
     var changedHt;
 
