Interaction settings UI modifications

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -367,7 +367,8 @@ h5{
     padding: 5px 17px;
     width: inherit;
     font-family: "OpenSans-Semibold", sans-serif;
-    border: 2px solid #ffc14e;
+    border: 2px solid #6a0054;
+    background-color: #6a0054;
     &:hover{
         background-color:#ffffff;
         cursor:pointer;
