--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_detail.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/module_detail.html
@@ -5,7 +5,7 @@
 
 {% block body_content %}
 {% include 'ndf/explore_secondary_header.html' %}
-	{% include 'ndf/widget_photo_upload.html' with url_name='course_about' widget_for="group_banner" is_banner=True  no_update_btn=True node=node  groupid=group_id if_module=True %}
+	{% include 'ndf/widget_photo_upload.html' with url_name='module_detail' widget_for="group_banner" is_banner=True  no_update_btn=True node=node  groupid=group_id if_module=True %}
 		<div class="title-strip">
 			{% trans "Showing all Units in" %}<h7 class="text-button-blue">{{node.name}} </h7><br/>
 			{% trans "Module Description:" %}<h7 class="text-button-blue">{{node.content|safe}}</h7>
