--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
@@ -1,5 +1,7 @@
-{% load get_dict_from_list_of_dicts from simple_filters %}
 {% load i18n %}
+{% load get_dict_from_list_of_dicts from simple_filters %}
+{% load get_relation_value  from ndf_tags %}
+
 {% if first_arg and second_arg and third_arg %}
     <a href="{% url url_name first_arg second_arg third_arg %}{{search_url_text|safe}}"/>
 {% elif first_arg and second_arg %}
@@ -10,6 +12,8 @@
 
 <div class="module_card">
     <div class="card_banner">
+        {% get_relation_value node.pk 'has_banner_pic' as grel_dict %}
+
         {% if not grel_dict.cursor and grel_dict.grel_node and grel_dict.grel_node.if_file.thumbnail.relurl %}
             <img class="card_title" src="{{MEDIA_URL}}{{grel_dict.grel_node.if_file.mid.relurl}}" alt=""/>{{node.name}}
         {% else %}
