cdn link changed to bower component link

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_quiz_data.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_quiz_data.html
@@ -10,7 +10,7 @@
   <link href="/static/ndf/bower_components/pace/themes/blue/pace-theme-loading-bar.css" rel="stylesheet" />
   <!-- DataTables CSS -->
   <link href="/static/ndf/bower_components/datatables-plugins/integration/foundation/dataTables.foundation.css" rel="stylesheet" type="text/css" />
-  <script src="//cdn.rawgit.com/ashl1/datatables-rowsgroup/v1.0.0/dataTables.rowsGroup.js"></script>
+  <script src="/static/ndf/bower_components/datatables-rowsgroup/dataTables.rowsGroup.js"></script>
 <style type="text/css">
     .right-btn, .left-btn{
         /*float: left;*/
