--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gnotebook.html
@@ -1,10 +1,11 @@
-{% load get_course_filters get_username user_access_policy get_group_object from ndf_tags %}
+{% load get_course_filters get_username user_access_policy get_group_object get_gstudio_workspace_instance from ndf_tags %}
 {% user_access_policy groupid request.user as user_access_priv %}
 {% load simple_filters %}
 
 
 
 {% get_group_object group_id as group_object %}
+{% get_gstudio_workspace_instance as is_workspace %}
 
 {% include 'ndf/widget_user_access_modal.html' %}
 
@@ -446,13 +447,21 @@
     });
 
     function load_page_create_edit(node_id){
+            editor_type = "";
+            if("{{is_workspace}}" == "True"){
+                editor_type = "GeneralToolbar";
+            }
+            else{
+
+                editor_type = "LMSStudentsToolbar";
+            }
         $.ajax({
           url: "{% url 'widget_page_create_edit' group_id %}",
 
           data: {
             node_id: node_id,
             detail_url: "course_notebook_note",
-            editor_type: "LMSStudentsToolbar"
+            editor_type: editor_type,
           },
 
           type: "GET",
