--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 {% load simple_filters %}
 {% load ndf_tags %}
-<input type="button" data-reveal-id="enrollBuddiesModal" class="enrollBtn" "{% if 'Group' in group_object.member_of_names_list %}" value="Join" "{% else %}" value="Enrollment" "{%  endif %}" />
+{% get_gstudio_workspace_instance as is_workspace %}
+<input type="button" data-reveal-id="enrollBuddiesModal" class="enrollBtn"  "{% if is_workspace %}" "{% if request.user.pk in group_object.author_set %}" value="Joined" "{% else %}"  value="Join" "{% endif %}" "{% else %}" value="Enrollment" "{%  endif %}" />
 
 <div id="enrollBuddiesModal" class="reveal-modal medium radius" data-reveal data-alert>
     <h4 id="enrollBuddiesModalLabel"> {% if 'Group' in group_object.member_of_names_list %} {% trans "Join Status:" %}  {% else %} {% trans "Enrollment Status:" %} {% endif %}  </h4><br/>
