rating widget modiefied for comments

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
@@ -10,7 +10,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
@@ -27,7 +26,13 @@
     <link rel="stylesheet" href="/static/ndf/bower_components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/static/ndf/bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/static/ndf/css/themes/clix/clix2017.css">
+    <!-- variables for js ussage -->
+    
+    <input type="hidden" name="group_id" class="group_id" value="{{group_id}}">
+    <input type="hidden" name="is_authenticated" class="is_authenticated" value="{{user.is_authenticated}}">
+    <input type="hidden" name="csrf_token" class="csrf_token" value="{{csrf_token}}">
 
+    <!-- end variables for js ussage -->
     <script type="text/javascript" src="/static/ndf/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation.min.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation/foundation.topbar.js"></script>
@@ -69,6 +74,7 @@
   <!-- JS -->
   <!--<script src="/static/ndf/js/app.js"></script>-->
   <script src="/static/ndf/bower_components/foundation/js/foundation.min.js"></script>
+  <script src="/static/ndf/js/gstudio-functions.js"></script>
 
   <!-- end of footer cache -->
 
